# LSOracle

./: .astylerc  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.actions  Dockerfile.debian.testing  Dockerfile.openroad  Dockerfile.ubuntu.bionic  Dockerfile.ubuntu.focal  Dockerfile.ubuntu.groovy  LICENSE  Makefile  Makefile.conf  NPN_LUT234.json  NPN_LUT4.json  NPN_complete_noZero.json  README.md  abc.rc  basic_tests.py  branch_cleanup.txt  deps_install.sh  index.md  oracle.cc  simple.ls  test.blif  toJSON.sh  travis_run_build.sh
MaxAustin/: CMakeLists.txt  t.aig
MaxAustin/lib/: CMakeLists.txt
MaxAustin/lib/abc/: abclib.dsp
MaxAustin/lib/alice/: .gitignore
MaxAustin/lib/percy/: .gitmodules
MaxAustin/testing/: lstools.cpp  max.cpp
core/: CMakeLists.txt  config.h.in  fail.bench  generate_kahypar.py  gts.cpp  gts.hpp  kahypar_config.hpp  kahypar_temp_config.cpp  lsoracle.cpp  lstools.cpp  s27.aig  timingSta.h  union_find.hpp  utility.cpp  utility.hpp
core/algorithms/: abc_lut_mapping.hpp  collapse_abc_lut.hpp
core/algorithms/asic_mapping/: decompose_unmapped.hpp  techmapping.hpp
core/algorithms/fpga_mapping/: techmapping.hpp
core/algorithms/mapping/: fpxmg_mapping_view.hpp
core/algorithms/optimization/: abc.cpp  abc.hpp  abc_optimization_test.hpp  aig_script.hpp  aig_script2.hpp  aig_script3.hpp  aig_script4.hpp  aig_script5.hpp  budget.cpp  budget.cpp_back  budget.hpp  deep.hpp  exploder.cpp  exploder.hpp  four_way_optimization.hpp  mab.hpp  mig_script.hpp  mig_script2.hpp  mig_script3.hpp  optimization.hpp  optimization_test.hpp  optimization_test2.hpp  optimizer.cpp  optimizer.hpp  optimizers.cpp  optimizers.hpp  parser.hpp  resynthesis.cpp  resynthesis.hpp  rw_script.hpp  test_script.hpp  xag_script.hpp  xmg_script.hpp  xmg_script2.hpp
core/algorithms/optimization_scripts/: aig_script.hpp  mig_script2.hpp
core/algorithms/output/: mapped_verilog.hpp  rtlil.hpp  to_abc.hpp  verilog.hpp  verilog_utilities.hpp  xmg_map.cpp  xmg_techmap.hpp
core/algorithms/partitioning/: cluster.hpp  fpga_seed_partitioner.hpp  hyperg.hpp  kahypar_partitioner.hpp  partition_manager.hpp  partition_manager2.hpp  partition_manager_junior.hpp  partition_view.hpp  seed_partitioner.hpp  slack_view.hpp  structure_partition.hpp
core/algorithms/techmapping/: techmapping.hpp
core/algorithms/timing/: resynthesis.hpp
core/commands/: sta.hpp  version.hpp
core/commands/asic_map/: asic_map.hpp
core/commands/classification/: generate_truth_tables.hpp
core/commands/conversion/: aig.hpp  mig.hpp  xag.hpp  xmg.hpp
core/commands/input/: read.hpp  read_aig.hpp  read_bench.hpp  read_blif.hpp  read_sta.hpp  read_verilog.hpp  test_case.hpp
core/commands/lut_map/: lut_map.hpp  new_lut_map.hpp  xmg_map.hpp
core/commands/optimization/: abc.hpp  aigscript.hpp  aigscript2.hpp  aigscript3.hpp  aigscript4.hpp  aigscript5.hpp  balance.hpp  budget_script.hpp  budget_simple.hpp  cut_e.hpp  cut_rewriting.hpp  deep.hpp  depth_based.hpp  depth_partition.hpp  depthr.hpp  exploderize.hpp  interleaving.hpp  migscript.hpp  migscript2.hpp  migscript3.hpp  migtune.hpp  mixed_2steps.hpp  optimization.hpp  optimization_command.hpp  optimization_redux.hpp  optimization_test.hpp  optimize.hpp  optimize_tech.hpp  optimize_timing.hpp  optimize_timing2.hpp  oracle.hpp  oracle_test.hpp  refactor.hpp  resub.hpp  resynthesis_simple.hpp  rwscript.hpp  testscript.hpp  xagmigtune.hpp  xagscript.hpp  xmgmigtune.hpp  (+2 more)
core/commands/output/: disjoint_clouds.hpp  get_all_partitions.hpp  print_karnaugh_map.hpp  redirect.hpp  reroute.hpp  show_ntk.hpp  write.hpp  write_bench.hpp  write_blif.hpp  write_dot.hpp  write_hypergraph.hpp  write_partition.hpp  write_verilog.hpp
core/commands/partitioning/: external_partition.hpp  kahypar.hpp  partition_detail.hpp  partitioning.hpp  write_metis.hpp
core/commands/stats/: connectivity.hpp  crit_path_stats.hpp  critical_path.hpp  depth.hpp  fanin_histogram.hpp  fanout_histogram.hpp  function_stats.hpp  get_cones.hpp  level_size.hpp  ntk_stats.hpp  skip_histogram.hpp  write_stats.hpp  xmg_mapping.hpp
core/commands/testing/: abc_lut_map.hpp  convert_aig.hpp  convert_to_aig.hpp  find_part.hpp  find_xor.hpp  get_fanout.hpp  level_partition_manager.hpp  ntk_to_abc.hpp  pattern_rec.hpp  pattern_view.hpp  test_aig_then_part.hpp  test_cad_proj_part.hpp  test_find_xor.hpp  test_fpga_seed.hpp  test_seed_partitioner.hpp  test_sort_fanout.hpp
core/oracle/: CMakeLists.txt
core/store/: aig.hpp  klut.hpp  mig.hpp  xag.hpp  xmg.hpp
examples/abc/: CMakeLists.txt  abc.cpp
examples/abc/csharp/: Program.cs  abc.csproj
lib/: CMakeLists.txt
lib/Galois/: CMakeLists.txt
lib/Galois/lonestar/: CMakeLists.txt
lib/abc/: 7inputs.aig  CMakeLists.txt  input.bench  oc_aquarius.blif  oc_aquarius_test.blif  oc_aquarius_test.v  output.bench  output.blif  output.v  readme.md  s27.aig  s27.blif  s27.v  s27_comb.blif  s27_orig.v  s27_test.blif  s27_test.v  test.bench  test.blif
lib/abc/src/: starter.c
lib/alice/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml
lib/alice/docs/: changelog.rst  command.rst  conf.py  environment.rst  index.rst  installation.rst  macro_api.rst  modes.rst  settings.rst  store.rst  tutorial1.rst  tutorial3.rst  tutorial4.rst  tutorial5.rst  validators.rst
lib/alice/examples/: CMakeLists.txt  alias
lib/alice/include/: CMakeLists.txt
lib/alice/lib/: CMakeLists.txt
lib/alice/test/: CMakeLists.txt  command.cpp  json.cpp  store.cpp  tests.cpp  types.cpp  utils.cpp
lib/alice/tools/: AliceTools.cmake
lib/boost/: CMakeLists.txt
lib/boost/cmake/: FindBoost.cmake
lib/darknet/include/: darknet.h
lib/kahypar/: CMakeLists.txt  appveyor.yml
lib/kahypar/build_clang/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/kahypar/kahypar/: git_revision.h
lib/kahypar/lib/: CMakeLists.txt  libkahypar.cc
lib/mockturtle/: CMakeLists.txt
lib/oracle/: CMakeLists.txt
lib/percy/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  memcheck.sh
yosys-plugin/: CMakeLists.txt  oracle.cc
(+1154 files in other folders)
