add_library(percy INTERFACE)
target_include_directories(percy INTERFACE ${PROJECT_SOURCE_DIR}/include)

target_link_libraries(percy INTERFACE kitty libabcsat)
if (UNIX)
    target_link_libraries(percy INTERFACE nauty)
    if (PERCY_USE_SYRUP)
        target_link_libraries(percy INTERFACE syrup pthread)
    else()
        target_link_libraries(percy INTERFACE glucose)
    endif()
endif()
